# ignition

./: .gitignore  README.md  main.py  pyproject.toml
configs/: config.yaml  eval-seg.yaml  evaluate-toy.yaml  toy_dataset.yaml
configs/base/: base.yaml
configs/defaults/: defaults.yaml
configs/evaluate/: dataset.yaml  global.yaml  post_transforms.yaml
configs/train/: dataset.yaml  global.yaml  handlers.yaml  inferer.yaml  post_transforms.yaml  train.yaml
configs/train/models/: segresnetDS.yaml
configs_v2/: evaluate-rots.yaml  rots-all-lesions.yaml  train-toy-dataset.yaml
configs_v2/evaluate/: global.yaml
configs_v2/train/: dataset.yaml  post_transforms.yaml
sh/: train-toy.sh
src/ignition/: data.py  engines.py  handlers.py  models.py  optimizers.py  trainers.py  utils.py
src/ignition/data/: __init__.py  dataset.py  monai.py  transforms.py  utils.py
src/ignition/datasets/: __init__.py  abstract.py  base.py  mixins.py  monai.py  ri.py  vocsegmentation.py
src/ignition/handlers/: peft.py
src/ignition/losses/: __init__.py
src/ignition/lr_schedulers/: __init__.py
src/ignition/metrics/: __init__.py  abstract.py  base.py  loss.py  segmentation.py
src/ignition/models/: __init__.py  abstract.py  base.py  torchvision.py
src/ignition/transforms/: __init__.py
src/ignition/wandb/: logger.py  utils.py
tests/: test_all.py
tests/test-data/liverv3_small/: README.md  datalist.json
